# StageCNRS2026

./: CMakeLists.txt  dataLoader.cpp  inf_architecture.cpp  model7_weights.json  normalisationStats.json  prediction-visualiser.py  prediction_eval.py
scripts/: CMakeLists.txt  mfcc_calc.cpp  python_mfcc_extraction.py
